Fixed failing duplicate detection and reinstated tests